=====

New Features:

  * Upgrade to Spring Framework 2.5.
  * The Special:Translation page will now default to the user's default
    language instead of defaulting to English.

Bugfixes:

  * Umlauts, ampersands and other special characters were being double-escaped
    in the user menu.  Bug reported by Толик.
  * Resolve a CSS issue that impacted display of diffs.  Reported by legendsen.

Translation Updates:

  * Updated Dutch translations (Angel).
  * Added Galician translations (mmeixide).
  * Updated German translations (axelclk).
  * Updated Japanese translations (nattolover).
  * Updated Spanish translations (AngelPinazo & mmeixide).


0.6.2
=====

New Features:

  * Upgrade project dependencies to Servlet 2.4 and JSP 2.0.  Bugs in previous
    JAMWiki configuration settings required these dependencies, so this change
    should be backwards-compatible.
  * Upgrade to JSTL 1.1.2 (from 1.0.6).
  * Make the valid login, topic name, and role name patterns configurable.
  * Replace several custom methods with the org.apache.commons.lang equivalent.
  * During setup, create a default directory to use for image and other file
    uploads to hopefully eliminate some confusion.
  * When using multiple references to the same source, use the first non-empty
    reference definition instead of using the first reference definition.
  * Make the search engine instance a configurable parameter.
  * Remove the unnecessary "Are you sure" prompt when upgrading.
  * Use JFlex Maven plugin instead of Ant task (RegisDecamps).
  * Updated spam filter patterns.

Bugfixes:

  * Resolve a CSS issue that caused the TOC to be invisible on IE6.  Reported
    by bvold.
  * Umlauts, ampersands and other special characters were being double-escaped
    in the TOC.  Fix contributed by Louis Martin.
  * Fix issue where search terms were double-escaped when no search results
    were found.
  * Reload data handler and other values after upgrade to (hopefully) avoid